<?xml version="1.0"?>
<package format="3">
  <name>xsens_msgs</name>
  <version>2.0.2</version>
  <description>
    This package defines custom Xsens sensor sample format message to be
    used only with the MTdata2 format.
  </description>
  <maintainer email="bertrand.wuthrich@hes-so.ch"></maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <build_depend>rclpy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>builtin_interfaces</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>rosidl_default_generators</build_depend>
<!-- <build_depend>rosjava_bootstrap</build_depend> -->
<!-- <build_depend>rosjava_messages</build_depend> -->
  
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <exec_depend>builtin_interfaces</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>
  
   <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
